# hatiko

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/bot/: bot.py  middleware.py
app/bot/routers/: commands.py  imeicheck.py
app/core/: config.py
app/db/: connector.py  crud.py  models.py
app/services/check/: imiecheck.py
app/services/logger/: logger.py
app/services/validators/: imei.py
migrations/: env.py
migrations/versions/: ae6f16475d61_initial_migration.py
